# ShepherdPatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ShepherdPatch.ini
gui/ShepherdConfigurator/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Publish-Release.ps1  ShepherdConfigurator.csproj  app.manifest
gui/ShepherdConfigurator.Core/: ShepherdConfigurator.Core.csproj
gui/ShepherdConfigurator.Core/Configuration/: IniDocument.cs
gui/ShepherdConfigurator.Core/Services/: ModDependencyAnalyzer.cs  RuntimePrerequisiteAnalyzer.cs
gui/ShepherdConfigurator.Core/Shell/: AdaptiveLayoutAdvisor.cs  CardVisibilityFilter.cs  ConfiguratorStatusSummary.cs  ExperimentalSettingCatalog.cs
gui/ShepherdConfigurator.Tests/: AdaptiveLayoutAdvisorTests.cs  CardVisibilityFilterTests.cs  ConfiguratorStatusSummaryTests.cs  ExperimentalSettingCatalogTests.cs  IniDocumentTests.cs  ModDependencyServiceTests.cs  RuntimePrerequisiteAnalyzerTests.cs  ShepherdConfigurator.Tests.csproj
gui/ShepherdConfigurator/Pages/: AboutPage.xaml  AboutPage.xaml.cs  HomePage.xaml  HomePage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
gui/ShepherdConfigurator/Properties/: launchSettings.json
gui/ShepherdConfigurator/Properties/PublishProfiles/: win-x64.pubxml
gui/ShepherdConfigurator/Services/: ConfigFileService.cs  ModDependencyService.cs
src/: bink_playback.cpp  bink_playback.h  config.cpp  config.h  crash_dump.cpp  crash_dump.h  d3d_proc_redirect.cpp  d3d_proc_redirect.h  direct_input_policy.cpp  direct_input_policy.h  dllmain.cpp  engine_fov.cpp  engine_fov.h  engine_vars_overrides.cpp  engine_vars_overrides.h  execution_policy.cpp  execution_policy.h  frame_rate_override.cpp  frame_rate_override.h  gameplay_delta.cpp  gameplay_delta.h  intro_skip.cpp  intro_skip.h  legacy_runtime_policy.cpp  legacy_runtime_policy.h  lost_device_policy.cpp  lost_device_policy.h  memory_utils.cpp  memory_utils.h  precise_sleep.cpp  precise_sleep.h  present_params.cpp  present_params.h  projection_fix.cpp  projection_fix.h  qpc_timer.cpp  qpc_timer.h  raw_mouse.cpp  raw_mouse.h  render_hook_targets.cpp  (+17 more)
tests/: test_bink_playback.cpp  test_config.cpp  test_crash_dump.cpp  test_d3d_proc_redirect.cpp  test_direct_input_policy.cpp  test_engine_fov.cpp  test_engine_vars_overrides.cpp  test_execution_policy.cpp  test_frame_rate_override.cpp  test_gameplay_delta.cpp  test_intro_skip.cpp  test_legacy_runtime_policy.cpp  test_lost_device_policy.cpp  test_main.cpp  test_memory_utils.cpp  test_precise_sleep.cpp  test_present_params.cpp  test_projection_fix.cpp  test_qpc_timer.cpp  test_raw_mouse.cpp  test_registry.h  test_render_hook_targets.cpp  test_scheduler_targets.cpp  test_scheduler_timing.cpp  test_thread_diagnostics.cpp  test_timing_diagnostics.cpp  test_viewport_fix.cpp  test_window_mode.cpp
